<resources>
    <string name="app_name">test</string>
    <string name="start">Грати</string>
    <string name="back">Назад</string>
    <string name="time">Час:</string>
    <string name="pytanntya">Що об\'єднує ці 4 картинки?</string>
    <string name="close_level">В меню</string>
    <string name="next">Наступний рівень</string>
    <string name="win">Вітаємо! Ви пройшли рівень!</string>
    <string name="win_bonus">Вітаємо! Ви пройшли бонусний рівень!</string>
    <string name="lose">Ваша відповідь неправильна! Спробуйте ще раз</string>
    <string name="lose_bonus">Ваша відповідь неправильна!</string>
    <string name="bonus">Бонус +5</string>
    <string name="retry">Спробувати ще раз</string>
    <string name="questions">Бонусне завдання англійською. За правильну відповідь 5 монет</string>
</resources>