<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_background"
    android:background="@drawable/dialog_theme1"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/pic_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        >

        <ImageView
            android:id="@+id/stars"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:src="@drawable/coin"
            android:layout_marginTop="20sp"
            >

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="6sp"
            android:paddingBottom="5sp"
            android:layout_gravity="center">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0sp"

        >

        <Button
            android:id="@+id/close_level"
            android:layout_width="160sp"
            android:layout_height="50sp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/close_level"
            android:textSize="35px"
            android:textStyle="bold"
            android:onClick="close">

        </Button>

        <Button
            android:id="@+id/next_level"
            android:layout_width="160sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="35px"
            android:textStyle="bold"
            android:onClick="next_level">

        </Button>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/bonus"
            android:layout_width="160sp"
            android:layout_height="50sp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/bonus"
            android:textSize="35px"
            android:textStyle="bold"
            android:layout_margin="10sp"
            android:onClick="bonus"
            >

        </Button>

    </LinearLayout>

</LinearLayout>