<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_background"
    android:background="@drawable/dialog_theme1"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/pic_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/lose"
            android:layout_marginTop="20dp"
            >

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lose_bonus"
            android:gravity="center"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="6dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"

        >

        <Button
            android:id="@+id/bonus_close_level"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:onClick="close"
            android:text="@string/close_level"
            android:textSize="35px"
            android:textStyle="bold">

        </Button>

        <Button
            android:id="@+id/bonus_next_level"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="35px"
            android:textStyle="bold"
            android:onClick="bonus_next_level">

        </Button>

    </LinearLayout>

</LinearLayout>