<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_background"
    android:background="@drawable/dialog_theme1"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/pic_money_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        >

        <ImageView
            android:id="@+id/money_fail"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:src="@drawable/lose">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_text_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/text_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lose"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="15sp"
            android:paddingBottom="5sp"
            android:layout_gravity="center">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/navigation_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0sp"

        >

        <Button
            android:id="@+id/close_level_fail"
            android:layout_width="160sp"
            android:layout_height="50sp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/close_level"
            android:textSize="35px"
            android:textStyle="bold"
            android:onClick="close">

        </Button>

        <Button
            android:id="@+id/retry_level"
            android:layout_width="160sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10sp"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:gravity="center"
            android:text="@string/retry"
            android:textSize="35px"
            android:textStyle="bold"
            android:onClick="retry">

        </Button>



    </LinearLayout>



</LinearLayout>